<resources>
    <string name="app_name">ListOfStudents</string>
    <string name="list_of_students">List of students</string>
    <string name="add_student">Add student</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
