<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/activity_create_student__image"
        android:layout_width="170dp"
        android:layout_height="230dp"
        android:padding="10dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@drawable/boy"
        />

    <EditText
        android:id="@+id/activity_create_student__name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/activity_create_student__surname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_create_student__image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name"
        android:inputType="text"
        android:hint="@string/name"
        />

    <EditText
        android:id="@+id/activity_create_student__surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/activity_create_student__sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_create_student__image"
        app:layout_constraintTop_toBottomOf="@id/activity_create_student__name"
        tools:text="@string/surname"
        android:inputType="text"
        android:hint="@string/surname"
        />

    <TextView
        android:id="@+id/activity_create_student__sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:textSize="25sp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/activity_create_student__radioGroup"
        app:layout_constraintTop_toBottomOf="@id/activity_create_student__surname"
        app:layout_constraintStart_toEndOf="@id/activity_create_student__image"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <RadioGroup
        android:id="@+id/activity_create_student__radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/activity_create_student__sex"
        app:layout_constraintBottom_toBottomOf="@id/activity_create_student__add"
        app:layout_constraintStart_toEndOf="@id/activity_create_student__image"
        app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
            android:id="@+id/activity_create_student__male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="25dp"
            android:padding="10dp">
        </RadioButton>
        <RadioButton
            android:id="@+id/activity_create_student__female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="25dp"
            android:padding="10dp">
        </RadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/activity_create_student__cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="25sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/activity_create_student__radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/activity_create_student__add"
        />
    <Button
        android:id="@+id/activity_create_student__add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="25sp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/activity_create_student__radioGroup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/activity_create_student__cancel"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>